DTR-707 URL changed

--- a/app/views/AccessDeniedView.scala.html
+++ b/app/views/AccessDeniedView.scala.html
@@ -36,6 +36,6 @@
     @paragraph(messages("accessDenied.p1"))
     @link(
         "accessDenied.link",
-        appConfig.hmrcOnlineServiceDeskUrl
+        appConfig.govUKUrl
     )
 }
