DTR-510: linked dd1 to T9

--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -81,8 +81,9 @@
 
         @paragraph("directDebitPaymentSummary.setupPayment.p1")
 
-        @govukButton(
-            ButtonViewModel(messages("directDebitPaymentSummary.addPaymentButton"))
-        )
+        @govukButton(Button(
+            href = Some(routes.SetupDirectDebitPaymentController.onPageLoad().url),
+            content = Text(messages("directDebitPaymentSummary.addPaymentButton"))
+        ))
     }
 }
