--- a/app/views/PaymentPlanTypeView.scala.html
+++ b/app/views/PaymentPlanTypeView.scala.html
@@ -32,7 +32,7 @@
     bulletList: BulletList
 )
 
-@(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource], payingHmrcUrl: Option[String],  call: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource], selfAssessmentUrl: Option[String], paymentProblemUrl: Option[String], call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForSetupJourney(form, messages("paymentPlanType.title")), backLink = Some(call.url)) {
 
@@ -87,7 +87,7 @@
                     )
                 ),
                 paragraph("paymentPlan.collapsable.sa.p5"),
-                payingHmrcUrl.map { url =>
+                selfAssessmentUrl.map { url =>
                     paragraphWithLink(
                         message1 = Some(messages("paymentPlan.collapsable.sa.p6")),
                         linkMessage = messages("paymentPlan.collapsable.sa.p6.link"),
@@ -129,7 +129,7 @@
                         "paymentPlan.collapsable.tc.b4"
                     )
                 ),
-                payingHmrcUrl.map { url =>
+                paymentProblemUrl.map { url =>
                     paragraphWithLink(
                         message1     = Some(messages("paymentPlan.collapsable.tc.p6")),
                         linkMessage  = messages("paymentPlan.collapsable.tc.p6.link"),
