--- a/app/views/AddPaymentPlanEndDateView.scala.html
+++ b/app/views/AddPaymentPlanEndDateView.scala.html
@@ -46,7 +46,7 @@
                 RadiosViewModel.yesNo(
                     field = form("value"),
                     legend = LegendViewModel(messages(""))
-                ).copy(fieldset = None).inline()
+                ).copy(fieldset = None)
             )
         }
 
