DTR-1193-1 added missing full stop

--- a/app/views/AccountDetailsNotVerifiedView.scala.html
+++ b/app/views/AccountDetailsNotVerifiedView.scala.html
@@ -39,5 +39,5 @@ link: Link
       target        = "_blank"
    )
 
-@link("accountDetailsNotVerified.return.link", routes.YourDirectDebitInstructionsController.onPageLoad().url)
+@link("accountDetailsNotVerified.return.link", routes.YourDirectDebitInstructionsController.onPageLoad().url, linkFullStop = true)
 }
