--- a/app/views/components/Link.scala.html
+++ b/app/views/components/Link.scala.html
@@ -25,6 +25,7 @@
         prefixTextKey: String = emptyString,
         suffixTextKey: String = emptyString,
         extraClasses: String = emptyString,
+        linkFullStop: Boolean = false,
 )(implicit messages: Messages)
 
 
@@ -32,7 +33,7 @@
     @if(prefixTextKey.nonEmpty) {
         @{Html(messages(prefixTextKey))}
     }
-    <a href="@linkUrl" class="govuk-link" @if(isNewTab){rel="noreferrer noopener" target="_blank"}>@{Html(messages(linkTextKey))}</a>
+    <a href="@linkUrl" class="govuk-link" @if(isNewTab){rel="noreferrer noopener" target="_blank"}>@{Html(messages(linkTextKey))}</a>@if(linkFullStop){.}
 
     @if(suffixTextKey.nonEmpty) {
         @{Html(messages(suffixTextKey))}
