DTR-1391: remove css class govuk-fieldset__legend--l on h1

--- a/app/views/PaymentAmountView.scala.html
+++ b/app/views/PaymentAmountView.scala.html
@@ -38,7 +38,7 @@
             InputViewModel(
                 field = form("value"),
                 label = LabelViewModel(messages("paymentAmount.heading"))
-                        .asPageHeading().withCssClass("govuk-fieldset__legend--l"),
+                        .asPageHeading(),
             )
             .withPrefix(PrefixOrSuffix(content = "£"))
             .withWidth(Fixed10)
