DTR-471: full stop fix

--- a/app/views/PaymentPlanLockedWarningView.scala.html
+++ b/app/views/PaymentPlanLockedWarningView.scala.html
@@ -31,5 +31,7 @@
 
     @paragraph("paymentPlanLockedWarning.paragraph")
 
-    @link("paymentPlanLockedWarning.returnLink", call.url)
+    <span style="display:inline-block;">
+        @link("paymentPlanLockedWarning.returnLink", call.url)
+    </span>@messages(".")
 }
