--- a/app/views/AddPaymentPlanEndDateView.scala.html
+++ b/app/views/AddPaymentPlanEndDateView.scala.html
@@ -27,9 +27,9 @@
     mainErrorSummary: MainErrorSummary
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, backLinkCall: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("addPaymentPlanEndDate.title"))) {
+@layout(pageTitle = title(form, messages("addPaymentPlanEndDate.title")), backLink = Some(backLinkCall.url)) {
 
     @formHelper(action = routes.AddPaymentPlanEndDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
